<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Preference
        android:key="@string/key_get_nr_mode"
        android:title="@string/str_get_nr_mode" />

    <ListPreference
        android:entries="@array/array_nr_mode"
        android:entryValues="@array/array_nr_mode_value"
        android:key="@string/key_set_nr_mode"
        android:persistent="false"
        android:title="@string/str_set_nr_mode" />

    <ListPreference
        android:entries="@array/array_sim_type"
        android:entryValues="@array/array_sim_type_value"
        android:key="@string/key_get_sms_storage_on_sim"
        android:persistent="false"
        android:title="@string/str_get_sms_storage_on_sim" />

    <Preference
        android:key="@string/key_set_activate_vsim"
        android:title="@string/str_set_activate_vsim" />

    <Preference
        android:key="@string/key_setup_data_call"
        android:title="@string/str_setup_data_call" />
</PreferenceScreen>